[package]
name = 'datahighway-collator'
version = '3.6.1'
authors = ['Anonymous']
description = 'DataHighway parachain collator FRAME-based Substrate Node based upon the Cumulus.'
license = 'Unlicense'
homepage = 'https://substrate.dev'
repository = 'https://github.com/substrate-developer-hub/substrate-parachain-template'
edition = '2021'
build = 'build.rs'

[[bin]]
name = 'datahighway-collator'
path = 'src/main.rs'

[dependencies]
derive_more = '0.99.2'
log = '0.4.17'
codec = { version = '3.1.2', package = 'parity-scale-codec', default-features = false, features = ['derive', 'max-encoded-len'] }
clap = { version = '3.1.6', features = ['derive'] }
serde = { version = '1.0.136', features = ['derive'] }
serde_json = '1.0.74'
hex = { version = '0.4.3', default_features = false, features = ['alloc'] }
hex-literal = '0.3.4'

jsonrpc-core = '18.0.0'
jsonrpsee = { version = "0.13.0", features = ["server"] }

# Local
datahighway-parachain-runtime = { path = '../runtime', version = '3.6.0' }
module-primitives = { version = '3.0.6', default-features = false, path = '../pallets/primitives' }

# Substrate
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
frame-try-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', optional = true }

pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

## Substrate Client Dependencies
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', features = ['wasmtime'] }
sc-client-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-executor = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', features = ['wasmtime'] }
sc-keystore = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-network = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-service = { git = 'https://github.com/paritytech/substrate', features = ['wasmtime'], branch = 'polkadot-v0.9.24' }
sc-telemetry = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-tracing = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sc-sysinfo = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-authorship = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-keystore = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-tracing = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
substrate-prometheus-endpoint = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
try-runtime-cli = { git = 'https://github.com/paritytech/substrate', optional = true, branch = 'polkadot-v0.9.24' }

# Polkadot
polkadot-cli = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.24' }
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.24' }
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.24' }
polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.24' }
xcm = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v0.9.24' }

# Cumulus
cumulus-client-cli = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24' }
cumulus-client-collator = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24' }
cumulus-client-consensus-aura = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24' }
cumulus-client-consensus-common = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24' }
cumulus-client-network = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24' }
cumulus-client-service = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24' }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24' }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24' }
cumulus-relay-chain-inprocess-interface = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24' }
cumulus-relay-chain-interface = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24' }
cumulus-relay-chain-rpc-interface = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24' }

[dev-dependencies]
futures = { version = '0.3.19' }

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

[features]
default = []
runtime-benchmarks = [
    'datahighway-parachain-runtime/runtime-benchmarks',
    'polkadot-cli/runtime-benchmarks',
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
    'datahighway-parachain-runtime/try-runtime',
    'try-runtime-cli',
]
