[package]
name = 'datahighway-collator'
version = '3.9.0'
authors = ['Anonymous']
description = 'DataHighway parachain collator FRAME-based Substrate Node based upon the Cumulus.'
license = 'Unlicense'
homepage = 'https://substrate.dev'
repository = 'https://github.com/substrate-developer-hub/substrate-parachain-template'
edition = '2021'
build = 'build.rs'

[[bin]]
name = 'datahighway-collator'
path = 'src/main.rs'

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
derive_more = "0.99.2"
log = "0.4.17"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = '1.0.74'
hex-literal = "0.3.4"
jsonrpsee = { version = "0.15.1", features = ["server"] }

# Local
datahighway-parachain-runtime = { path = "../runtime" }
module-primitives = { default-features = false, path = '../pallets/primitives' }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }

# Polkadot
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.31" }

# Cumulus
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.31" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.31" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.31" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.31" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.31" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.31" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.31" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.31" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.31" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.31" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.31" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.31" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }

[features]
default = []
runtime-benchmarks = [
	"datahighway-parachain-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = ["datahighway-parachain-runtime/try-runtime"]
