[package]
name = 'datahighway-parachain-runtime'
version = '3.2.0'
authors = ['MXC Foundation GmbH <https://t.me/mxcfoundation>', 'Luke Schoen <luke@mxc.org>', 'Ilya Beregovskiy <ilya@mxc.org>']
license = 'GPL-3'
homepage = 'http://www.datahighway.com/'
repository = 'https://github.com/DataHighway-DHX/DataHighway-Parachain'
edition = '2021'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }

[dependencies]
chrono = { version = '0.4.19', default_features = false }
funty = { default-features = false, version = '=1.1.0' }
hex-literal = { version = '0.3.4', optional = true }
codec = { version = '2.0.0', package = 'parity-scale-codec', default-features = false, features = ['derive', 'max-encoded-len'] }
log = { version = '0.4.14', default-features = false }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }
serde = { version = '1.0.136', optional = true, features = ['derive'] }
smallvec = '1.6.1'
static_assertions = '1.1.0'

# Local Dependencies
module-primitives = { default-features = false, path = '../pallets/primitives' }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
sp-version = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }

## Substrate FRAME Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false, optional = true }
frame-executive = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
frame-try-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', optional = true }
try-runtime-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', optional = true }

## Substrate Pallet Dependencies
pallet-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
pallet-assets = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
pallet-authorship = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
pallet-indices = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
pallet-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
pallet-asset-tx-payment = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
pallet-treasury = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
pallet-utility = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }

# Cumulus dependencies
cumulus-pallet-aura-ext = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17', default-features = false }
cumulus-pallet-dmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17', default-features = false }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17', default-features = false }
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17', default-features = false }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17', default-features = false }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17', default-features = false }
cumulus-primitives-timestamp = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17', default-features = false }
cumulus-primitives-utility = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17', default-features = false }
pallet-collator-selection = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17', default-features = false }
parachain-info = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17', default-features = false }
cumulus-pallet-session-benchmarking = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17',  default-features = false, version = '3.0.0'}

# Polkadot Dependencies
pallet-xcm = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v0.9.17' }
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v0.9.17' }
polkadot-runtime-common = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v0.9.17' }
xcm = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v0.9.17' }
xcm-builder = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v0.9.17' }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v0.9.17' }

[features]
default = [
    'std',
]
std = [
    'chrono/std',
    'codec/std',
    'serde',
    'scale-info/std',
    'log/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'frame-system-rpc-runtime-api/std',
    'frame-try-runtime/std',
    'pallet-aura/std',
    'pallet-assets/std',
    'pallet-authorship/std',
    'pallet-balances/std',
    'pallet-collator-selection/std',
    'pallet-indices/std',
    'pallet-randomness-collective-flip/std',
    'pallet-session/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'pallet-asset-tx-payment/std',
    'pallet-treasury/std',
    'pallet-utility/std',
    'pallet-xcm/std',
    'cumulus-pallet-aura-ext/std',
    'cumulus-pallet-parachain-system/std',
    'cumulus-pallet-xcm/std',
    'cumulus-pallet-xcmp-queue/std',
    'cumulus-primitives-core/std',
    'cumulus-primitives-timestamp/std',
    'cumulus-primitives-utility/std',
    'cumulus-pallet-dmp-queue/std',
    'parachain-info/std',
    'polkadot-parachain/std',
    'polkadot-runtime-common/std',
    'xcm-builder/std',
    'xcm-executor/std',
    'xcm/std',
]

runtime-benchmarks = [
    'hex-literal',
    'sp-runtime/runtime-benchmarks',
    'xcm-builder/runtime-benchmarks',
    'frame-benchmarking/runtime-benchmarks', # must be provided
    'frame-system-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
    'cumulus-pallet-session-benchmarking/runtime-benchmarks',
    'pallet-utility/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'pallet-indices/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-collator-selection/runtime-benchmarks',
    'pallet-xcm/runtime-benchmarks',
    'pallet-treasury/runtime-benchmarks',
]

try-runtime = [
    'frame-try-runtime',
    'frame-executive/try-runtime',
    'frame-system/try-runtime',
    'frame-support/try-runtime',
    'pallet-utility/try-runtime',
    'pallet-timestamp/try-runtime',
    'pallet-indices/try-runtime',
    'pallet-balances/try-runtime',
    'pallet-collator-selection/try-runtime',
    'pallet-treasury/try-runtime',
]
